@@ -1,16 +1,16 @@
 <div id="description">
-  <h2>Error!!</h2>
+  <h2>[[err]]</h2>
   <p>
-    Please contact administrator
+    [[err_text]]
   </p>
-  <h2>Contact Info</h2>
+  <h2>[[info]]</h2>
   <table class="info" border="0">
     <tr>
-      <td>Admin</td>
+      <td>[[admin]]</td>
       <td class="print">#{@config[:admin]}</td>
     </tr>
     <tr>
-      <td>Mail</td>
+      <td>[[mail]]</td>
       <td class="print">#{@config[:mail]}</td>
     </tr>
   </table>
